--- a/index.html
+++ b/index.html
@@ -1,1 +1,299 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nuestros Planes ❤️</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Sacramento&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Quicksand', sans-serif;
+      background: linear-gradient(135deg, #fce3ec, #dbe8fc);
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      text-align: center;
+      padding: 50px 20px 20px 20px;
+    }
+    header h1 {
+      font-family: 'Sacramento', cursive;
+      font-size: 3rem;
+      color: #e63975;
+    }
+    .category {
+      background: white;
+      border-radius: 15px;
+      padding: 25px;
+      margin: 20px auto;
+      box-shadow: 0px 6px 16px rgba(0,0,0,0.1);
+      max-width: 900px;
+    }
+    .category h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-weight: 600;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+      columns: 2;
+    }
+    ul li {
+      margin-bottom: 8px;
+      padding-left: 5px;
+    }
+    ul li::before {
+      content: "✨ ";
+      color: #e63975;
+    }
+    footer {
+      text-align: center;
+      padding: 30px;
+      font-size: 1.1rem;
+      color: #444;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>🌸 Nuestros Planes 🌸</h1>
+    <p>Un montón de aventuras para compartir juntos 💕</p>
+  </header>
 
+  <!-- Ocio -->
+  <div class="category">
+    <h2>🎉 Ocio</h2>
+    <ul>
+      <li>Peli cine</li>
+      <li>Discoteca</li>
+      <li>Merienda picnic</li>
+      <li>Merienda cafetería</li>
+      <li>Piscina Palomar</li>
+      <li>Piscina Guadalest</li>
+      <li>Piscina Preventorio</li>
+      <li>Autocine Dénia</li>
+      <li>Bolera</li>
+      <li>Marmarela</li>
+      <li>Copity</li>
+      <li>Zensa puerto</li>
+      <li>Shopping</li>
+      <li>Viaje express</li>
+      <li>Pous Clars</li>
+      <li>Fonts del Algar</li>
+      <li>Molí de l’ombria</li>
+      <li>Antella</li>
+      <li>Saltar camas elásticas</li>
+      <li>Karting</li>
+      <li>Concierto</li>
+      <li>Kayak</li>
+      <li>Barranquismo</li>
+      <li>Viaje Barco</li>
+      <li>Feria</li>
+      <li>Parque de atracciones</li>
+      <li>Parque de animales</li>
+      <li>Moto agua</li>
+      <li>Patinaje sobre hielo</li>
+      <li>Mercadillo</li>
+      <li>Museo ilusiones</li>
+      <li>Visita calas (Granadella, Portixol…)</li>
+      <li>Tabarca</li>
+      <li>Les Rotes</li>
+      <li>Esquiar</li>
+      <li>Rooftop</li>
+      <li>Aeropuerto / ver aviones</li>
+      <li>Montar en tren</li>
+      <li>Balearia</li>
+      <li>Visita pueblito</li>
+      <li>Ruta en moto</li>
+      <li>Coves moros Bocairent</li>
+      <li>Fábrica chocolate Valor</li>
+      <li>Noche en hotel</li>
+      <li>Noche de acampada</li>
+      <li>Cata de café</li>
+      <li>Amor natural</li>
+      <li>Amor en playa</li>
+      <li>Vivac aire libre</li>
+      <li>Noche en bungalow / burbuja</li>
+      <li>Teatro / monólogo</li>
+      <li>Cita en silencio</li>
+      <li>Mirador Carrasqueta</li>
+      <li>Visita Ikea</li>
+      <li>Bonaire</li>
+      <li>Cena formal</li>
+      <li>Alquilar bici eléctrica</li>
+      <li>Amor en sitios</li>
+      <li>Cita sin móvil</li>
+    </ul>
+  </div>
+
+  <!-- Deporte -->
+  <div class="category">
+    <h2>💪 Deporte</h2>
+    <ul>
+      <li>Nadar</li>
+      <li>Pádel</li>
+      <li>Tenis</li>
+      <li>Running pista atletismo</li>
+      <li>Entreno preparar esquí</li>
+      <li>Gym</li>
+      <li>Bádminton</li>
+      <li>Sesión estiramientos en casa</li>
+      <li>Yoga</li>
+      <li>Vía verde</li>
+      <li>El Racó</li>
+      <li>Subida el Salt</li>
+      <li>Vía Cocen</li>
+      <li>Barranc Cint</li>
+      <li>Subida Cruz</li>
+      <li>Subida Preventorio (Llançols)</li>
+      <li>Menejador</li>
+      <li>Serreta</li>
+      <li>Montcabrer</li>
+      <li>Serelles</li>
+      <li>Pico del Águila</li>
+      <li>Cova Agres</li>
+      <li>Puig Campana</li>
+      <li>La Aitana</li>
+      <li>Buitrera</li>
+      <li>Cova de Sant Jordi</li>
+      <li>Cava de Agres</li>
+      <li>Subida casita</li>
+      <li>Benicadell</li>
+      <li>Pasarelas de Relleu</li>
+      <li>Penyo d’Ifach</li>
+      <li>Paseo ecológico Benissa</li>
+      <li>Vía verde Dénia</li>
+      <li>Faro Dénia</li>
+      <li>Puerto → Rotes Dénia</li>
+      <li>El Montgó</li>
+      <li>Cova tallada</li>
+      <li>Cova del Aigua Dénia</li>
+      <li>Cala dels Testos</li>
+      <li>Ruta Moraig-Llebeig</li>
+    </ul>
+  </div>
+
+  <!-- Relax -->
+  <div class="category">
+    <h2>🧘 Relax</h2>
+    <ul>
+      <li>Cocinar pizzas</li>
+      <li>Siesta</li>
+      <li>Amor tranquilo</li>
+      <li>Peli + palomitas sofá</li>
+      <li>Masaje relajante</li>
+      <li>Skin care</li>
+      <li>Paseo tranquilo</li>
+      <li>Mirador</li>
+      <li>Manualidades Action</li>
+      <li>Juego de mesa</li>
+      <li>Café cerámica</li>
+      <li>Noche hotel</li>
+      <li>Spa</li>
+      <li>Masaje para 2</li>
+      <li>Caricias suaves / masaje pelo</li>
+      <li>Manta en naturaleza / playa</li>
+      <li>Cocinar crepes / tarta / dulces</li>
+      <li>Tarde de lectura juntos</li>
+    </ul>
+  </div>
+
+  <!-- Comida -->
+  <div class="category">
+    <h2>🍴 Comida</h2>
+    <ul>
+      <li>Alcoy – Callejón de Cano</li>
+      <li>Alcoy – La Taberneta</li>
+      <li>Alcoy – Macdonalds / Burguer</li>
+      <li>Alcoy – La cosa nostra</li>
+      <li>Alcoy – Mariu Pizza</li>
+      <li>Alcoy – El Toket (Muro)</li>
+      <li>Alcoy – Pensión Mariola (Agres)</li>
+      <li>Alcoy – La Maraña</li>
+      <li>Alcoy – Torre de cotes</li>
+      <li>Alcoy – Celler de Joan</li>
+      <li>Alcoy – Don Nicolás</li>
+      <li>Alcoy – Sakura</li>
+      <li>Alcoy – Alameda Bistró</li>
+      <li>Alcoy – Chino ZN</li>
+      <li>Alcoy – Bar cole</li>
+      <li>Alcoy – Pepes</li>
+      <li>Alcoy – Crepería Santa María</li>
+      <li>Alcoy – Bellota y centeno</li>
+      <li>Alcoy – Huevo Poché</li>
+      <li>Alcoy – Chino Ibi</li>
+      <li>Alcoy – Bar Pádel</li>
+      <li>Dénia – Pizzería Cielo y Masa</li>
+      <li>Dénia – Pizzería El forn</li>
+      <li>Dénia – La vecchia Roma (sin gluten)</li>
+      <li>Dénia – Paradis</li>
+      <li>Dénia – Blay Beach</li>
+      <li>Dénia – Noray desayunos</li>
+      <li>Dénia – Tasca Eulália</li>
+      <li>Dénia – Els Tomasets</li>
+      <li>Dénia – Ca Pepa Teresa</li>
+      <li>Dénia – El Cavall y L’Androna</li>
+      <li>Dénia – A la fresca</li>
+      <li>Dénia – María José Chino</li>
+      <li>Dénia – Malavita</li>
+      <li>Dénia – Movida (desayuno/cena caro)</li>
+      <li>Dénia – Volt Café</li>
+      <li>Dénia – Republic</li>
+      <li>Jávea – Poseidonia</li>
+      <li>Jávea – Cala Clemence</li>
+      <li>Jávea – Mirador Cap de la Nao</li>
+      <li>Jávea – Burguer puerto</li>
+      <li>Jávea – Cala Bandida</li>
+      <li>Alicante – Pizza Avion</li>
+      <li>Alicante – Kebab outlet</li>
+      <li>Alicante – 30 y tantos</li>
+      <li>Alicante – Saona</li>
+      <li>Alicante – Lafolie</li>
+      <li>Alicante – Madness Coffee</li>
+      <li>Alicante – Chinocampo</li>
+      <li>Alicante – Metoo</li>
+      <li>Alicante – Burguer 37 Campello</li>
+      <li>Alicante – L’Arruz</li>
+      <li>Benidorm – Restaurant la Cartuja</li>
+      <li>Alicante – Mexican Grani</li>
+      <li>Alicante – Taverna del Raco del Plà</li>
+      <li>Alicante – Casa Mia Italia</li>
+      <li>Alicante – Casa Medieval LEnova</li>
+      <li>La Vila – El Calavera</li>
+      <li>La Vila – El Pòsit</li>
+      <li>La Vila – El Hogar del Pescador</li>
+      <li>Alicante – Burguer Circo</li>
+      <li>Alicante – Liberty Kitchen</li>
+      <li>Alicante – Dàrsena</li>
+      <li>Alicante – El Titos</li>
+      <li>Alicante – Ru yi / Xino xino</li>
+      <li>Alicante – Steki</li>
+      <li>Valencia – Voltereta</li>
+      <li>Andorra – Grau Roig</li>
+      <li>Andorra – Surf</li>
+      <li>Andorra – Argentino</li>
+      <li>Andorra – And Burguer Zero</li>
+      <li>Andorra – 41 Pizzería</li>
+      <li>Andorra – Hincha</li>
+      <li>Andorra – L’Informal</li>
+      <li>Andorra – Karving</li>
+      <li>Andorra – Kofi</li>
+      <li>Andorra – Siam Siki (Caldea)</li>
+      <li>Andorra – Restaurant 120</li>
+      <li>Andorra – Mood</li>
+      <li>Andorra – Blot Canillo</li>
+      <li>Andorra – Borda Eulari</li>
+      <li>Andorra – Commençal</li>
+      <li>Andorra – The Rooftop Van</li>
+      <li>Andorra – Xtreme Pizza</li>
+      <li>Andorra – La Coma Arcalís</li>
+    </ul>
+  </div>
+
+  <footer>
+    ❤️ Con amor, para vivir juntos cada aventura ❤️
+  </footer>
+</body>
+</html>
